# extended-word-list-generator

./: .gitignore  README.md  generate-all.py  pyproject.toml  xwlg.py
sample/: Extended word list.docx
